# norm

./: .gitignore  norm.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.paul/: HANDOFF-2026-03-13.md  PROJECT.md  ROADMAP.md  SPECIAL-FLOWS.md  STATE.md
.paul/handoffs/archive/: HANDOFF-2026-03-13-p2.md  HANDOFF-2026-03-13-p3.md  HANDOFF-2026-03-13-p4.md  HANDOFF-2026-03-14-p4.md  HANDOFF-2026-03-14-p5.md  HANDOFF-2026-03-14-p7.md
.paul/phases/01-backend-core/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.paul/phases/02-api-websocket/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/03-frontend-shell/: 03-01-PLAN.md  03-01-SUMMARY.md
.paul/phases/04-detail-views-polish/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
.paul/phases/05-startup-registration/: 05-01-PLAN.md  05-01-SUMMARY.md
.paul/phases/06-e2e-validation/: 06-01-PLAN.md  06-01-SUMMARY.md
.paul/phases/07-resilience-polish/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md
backend/: config.py  database.py  main.py  models.py  parser.py  parser_models.py  registry.py  schemas.py  watcher.py  websocket.py
backend/tests/: test_api.py  test_parser.py
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/lib/: types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: dev.sh  start.sh
tests/: test_api.py  test_parser.py  test_watcher.py  test_watcher_resilience.py  test_websocket.py
(+6 files in other folders)
